--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<html>
+  <link rel="stylesheet" type="text/css" href="main.css"/>
   <head>
     <title>Cory Schwartz</title>
   </head>
   <header>
     <div class = "logo">
-      <h1> <a href="Schwartzyy55.github.io"> Cory Schwartz</a> </h1>
+      <h1> <a href="index.html"> Cory Schwartz</a> </h1>
     </div>
   </header>
-
+</html>
