--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
+<!-- Don't inlude <html> tags, Github is weird -->
 
+  <!-- linking to CSS stylesheet -->
   <link rel="stylesheet" type="text/css" href="main.css"/>
+
+  <!-- Tab Name -->
   <head>
     <title>Cory Schwartz</title>
   </head>
-  <header>
-    <div class = "logo">
+
+  <!-- This body tag will be used as the html tag -->
+  <body>
+
+    <!-- Main Label / Logo -->
+    <header>
       <h1> <a href="index.html"> Cory Schwartz</a> </h1>
-    </div>
-  </header>
+    </header>
+
+
+  </body>
