--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
   <!-- This body tag will be used as the html tag -->
   <body>
 
-    <!-- Main Label / Logo -->
+    <!-- Top Label / Logo -->
     <header>
       <h1> <a href="index.html"> Cory Schwartz</a> </h1>
     </header>
 
+    <!-- Navigation Panel -->
+    <nav>
+        <ol>
+          <li><button><a href="index.html">Home</a></button></li>
+          <li><button><a href="index.html">Home</a></button></li>
+          <li><button><a href="index.html">Home</a></button></li>
+          <li><button><a href="index.html">Home</a></button></li>
+        </ol>
+    </nav>
 
   </body>
