Added Icon in Tab

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <!-- linking to CSS stylesheet -->
   <link rel="stylesheet" type="text/css" href="main.css"/>
 
-  <!-- Tab Name -->
+  <!-- Tab Name + icon -->
   <head>
     <title>Cory Schwartz</title>
+    <link rel="icon" href="c-icon.png">
   </head>
 
   <!-- This body tag will be used as the html tag -->
