--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Tab Name + icon -->
   <head>
     <title>Cory Schwartz</title>
-    <link rel="icon" href="c-icon.png">
+    <link rel="icon" href="cory-icon.png">
   </head>
 
   <!-- This body tag will be used as the html tag -->
