added Search Engine Optimization (SEO)
learned this in class today

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <!-- linking to CSS stylesheet -->
   <link rel="stylesheet" type="text/css" href="main.css"/>
 
-  <!-- Tab Name + icon -->
+  <!-- Tab Name + icon + Search Engine Optimizeation (SEO) + keywords (not necessary)-->
   <head>
     <title>Cory Schwartz</title>
     <link rel="icon" href="c-icon.png">
+    <meta charset="UTF-8">
+    <meta name="description"  content="Discription example">
+    <meta name="keywords" content="Cory, Schwartz, Resume, Career, Hockey, Oakland, Metro Jets"
   </head>
 
   <!-- This body tag will be used as the html tag -->
