--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!-- Don't inlude <html> tags, Github is weird -->
-
+<html>
   <!-- linking to CSS stylesheet -->
   <link rel="stylesheet" type="text/css" href="main.css"/>
 
@@ -35,3 +34,4 @@
       as well as what i am working on currently/next. </p>
 
     </body>
+</html>
