new font + form button
new apple font added + learning where i can use this form button

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       as well as what i am working on currently/next.
       </p>
     </body>
+    <input type="submit" value="Register">
   </main>
 
   <footer>
