remove portfolio and posts pages
might delete perm. kinda similar to resume and home page

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <link rel="icon" href="c-icon.png">
     <meta charset="UTF-8">
     <meta name="description"  content="Discription example">
-    <meta name="keywords" content="Cory, Schwartz, Resume, Career, Hockey, Oakland, Metro Jets"
+    <meta name="keywords" content="Cory, Schwartz, Resume, Career, Hockey, Oakland, Metro Jets">
   </head>
 
-  <!-- This body tag will be used as the html tag -->
 
     <!-- Top Label / Logo -->
   <header>
@@ -22,9 +21,9 @@
     <!-- Navigation Panel -->
   <nav>
       <ol>
-        <li class="nav-btn"><a href="resume.html">Resume</a></li>
-        <li class="nav-btn"><a href="index.html">Portflio</a></li>
-        <li class="nav-btn"><a href="index.html">Posts</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="index.html">page 3</a></li>
+        <li><a href="index.html">page 4</a></li>
       </ol>
   </nav>
 
