page3 test page

--- a/page3.html
+++ b/page3.html
@@ -12,28 +12,24 @@
     <meta name="keywords" content="Cory, Schwartz, Resume, Career, Hockey, Oakland, Metro Jets">
   </head>
 
+  <!-- Navigation Panel -->
+<nav>
+    <a href="resume.html">Resume</a>
+    <a href="page3.html">page 3</a>
+    <a href="index.html">page 4</a>
+</nav>
+
 
     <!-- Top Label / Logo -->
   <header>
     <h1> <a href="index.html"> Cory Schwartz</a> </h1>
   </header>
 
-    <!-- Navigation Panel -->
-  <nav>
-      <ol>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="page3.html">page 3</a></li>
-        <li><a href="index.html">page 4</a></li>
-      </ol>
-  </nav>
 
   <main>
     <body>
-      <p title="first paragraph"> This is a new section. Here i will include what is new with me recently,
-      as well as what i am working on currently/next.
-      </p>
+
     </body>
-    <input type="submit" value="Register">
   </main>
 
   <footer>
