--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
   <nav>
       <ol>
         <li><a href="resume.html">Resume</a></li>
-        <li><a href="index.html">page 3</a></li>
+        <li><a href="page3.html">page 3</a></li>
         <li><a href="index.html">page 4</a></li>
       </ol>
   </nav>
