update submenu + google verification
added my website to google search console

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <!-- Tab Name + icon + Search Engine Optimizeation (SEO) + keywords (not necessary)-->
   <head>
     <title>Cory Schwartz</title>
+    <meta name="google-site-verification" content="GHdsm1gE6piSKZ4iLMa3jWrJBXWH68LEMCnNll-QbZg" />
     <link rel="icon" href="c-icon.png">
     <meta charset="UTF-8">
     <meta name="description"  content="Discription example">
@@ -20,11 +21,15 @@
 
     <!-- Navigation Panel -->
   <nav>
-      <ol>
-        <li><a href="resume.html">Resume</a></li>
+      <ul>
+        <li><a href="resume.html">Resume</a>
+          <ul>
+            <li><a href="resume.html">2</a></li>
+          </ul>
+        </li>
         <li><a href="page3.html">page 3</a></li>
         <li><a href="index.html">page 4</a></li>
-      </ol>
+      </ul>
   </nav>
 
   <main>
