--- a/page3.html
+++ b/page3.html
@@ -6,6 +6,7 @@
   <!-- Tab Name + icon + Search Engine Optimizeation (SEO) + keywords (not necessary)-->
   <head>
     <title>Cory Schwartz</title>
+    <meta name="google-site-verification" content="GHdsm1gE6piSKZ4iLMa3jWrJBXWH68LEMCnNll-QbZg" />
     <link rel="icon" href="c-icon.png">
     <meta charset="UTF-8">
     <meta name="description"  content="Discription example">
