--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
   <!-- Tab Name + icon + Search Engine Optimizeation (SEO) + keywords (not necessary)-->
   <head>
     <title>Cory Schwartz</title>
+    <meta name="google-site-verification" content="GHdsm1gE6piSKZ4iLMa3jWrJBXWH68LEMCnNll-QbZg" />
     <link rel="icon" href="c-icon.png">
     <meta charset="UTF-8">
     <meta name="description"  content="Discription example">
@@ -20,11 +21,11 @@
 
     <!-- Navigation Panel -->
   <nav>
-      <ol>
+      <ul>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="page3.html">page 3</a></li>
         <li><a href="index.html">page 4</a></li>
-      </ol>
+      </ul>
   </nav>
 
   <!-- Start of Resume -->
@@ -57,6 +58,8 @@
         Employment to be added soon.
       </p>
     </body>
+    <a href="etc/Resume2021" type="application/pdf">PDF</a>
+    <a href="etc/polka.mp3" type="audio/mpeg">MP3</a>
   </main>
 
   <footer>
